hphp/hack/test/typecheck/array/disallow_two_type_parameters_for_varray.php.exp
File "disallow_two_type_parameters_for_varray.php", line 3, characters 33-33:
Encountered unexpected token '>'. (Parsing[1002])
