hphp/hack/test/typecheck/array/disallow_two_type_parameters_for_varray.php
<?hh // partial

function test(): varray<int, int> {
  return varray[0, 1, 2];
}
